<resources>
    <string name="app_name">Chess Tactics</string>

    <!--Titles-->
    <string name="count_down">Count down</string>
    <string name="store">Store</string>
    <string name="difficulty">Difficulty</string>

    <!--TextView-->
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="play">Play</string>
    <string name="time_out">Time out</string>
    <string name="results">Results</string>
    <string name="average_elo">Average elo</string>
    <string name="packages">Packages</string>
    <string name="time_week">7 days</string>
    <string name="time_month">30 days</string>
    <string name="time_all">All time</string>
    <string name="elo">Elo</string>
    <string name="confirm">Confirm</string>
    <string name="desc_quit_exercise">If you skip this puzzle it will count as lost</string>
    <string name="select_piece">Select a piece</string>

    <!--Menu-->
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="progress">Progress</string>
    <string name="profile">Profile</string>

    <!--Pie-->
    <string name="failed">Failed</string>
    <string name="solved">Solved</string>

    <!--Buttons-->
    <string name="btn_continue">Continue</string>

    <!--Preferences-->
    <string name="sound">Sound</string>
    <string name="screen_on">Keep screen on while playing</string>
    <string name="flip_board">Flip board for black</string>
    <string name="next_puzzle">Go to next puzzle automatically</string>
    <string name="next_puzzle_description">Only after solving the puzzle </string>

    <!--general-->
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>

</resources>
