<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.preference.CheckBoxPreference
        android:defaultValue=""
        android:key="keySound"
        android:title="@string/sound"
        app:iconSpaceReserved="false" />

    <Preference android:layout="@layout/item_divider" />

    <android.support.v7.preference.CheckBoxPreference
        android:defaultValue=""
        android:key="keyScreenOn"
        android:title="@string/screen_on"
        app:iconSpaceReserved="false" />

    <Preference android:layout="@layout/item_divider" />


    <android.support.v7.preference.CheckBoxPreference
        android:defaultValue=""
        android:key="keyGoToNextPuzzle"
        android:title="@string/next_puzzle"
        app:iconSpaceReserved="false"
        app:summary="@string/next_puzzle_description" />

    <Preference android:layout="@layout/item_divider" />

    <android.support.v7.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="keyFlipBoard"
        android:title="@string/flip_board"
        app:iconSpaceReserved="false" />


</android.support.v7.preference.PreferenceScreen>