<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_categories"
        android:icon="@drawable/ic_categories_24dp"
        android:title="@string/categories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_progress"
        android:icon="@drawable/ic_chart_24dp"
        android:title="@string/progress"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_settings"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>